# token-stream

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs  lookahead.rs  position.rs  span.rs  stream.rs  token.rs
